--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,32 +1,30 @@
- <!--============== Page title Start ==============-->
- <div class="full-row py-5 mt-5 bg-light">
+<!--============== Page Banner Start ==============-->
+<div class="page-banner-simple mt-5 bg-secondary py-40"
+    style="background-image: url(../../assets/assets/images/background/bg-4.png); background-repeat: no-repeat; background-position: center center; background-size: cover;">
     <div class="container">
         <div class="row">
-            <div class="col">
-                <h3 class="text-secondary">Contact</h3>
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb mb-0 bg-transparent p-0">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active text-primary" aria-current="page">Contact</li>
-                    </ol>
-                </nav>
+            <div class="col-lg-6">
+                <h3 class="banner-title text-white">Contact Us</h3>
+                <span class="banner-tagline font-medium text-white">Reach out to us today for inquiries or
+                    support.</span>
             </div>
         </div>
     </div>
 </div>
-<!--============== Page title End ==============-->
+<!--============== Page Banner End ==============-->
 
 <!--============== Contact form Start ==============-->
-<div class="full-row pt-0 bg-light">
+<div class="full-row pt-5 bg-light">
     <div class="container">
         <div class="row">
             <div class="col-md-5 order-md-2">
                 <h4 class="down-line mb-4">Get In Touch</h4>
-                <p>Nullam vel enim risus. Integer rhoncus hendrerit sem egestas porttitor.</p>
+                <p>Looking for help or any support? We're available 24 hours a day.</p>
                 <div class="mb-3">
                     <ul>
                         <li class="mb-3">
-                            <h6 class="mb-0">Office Address :</h6> Level 13, 2 Elizabeth St, Melbourne, Victoria 3000 Australia
+                            <h6 class="mb-0">Office Address :</h6> Level 13, 2 Elizabeth St, Melbourne, Victoria 3000
+                            Australia
                         </li>
                         <li class="mb-3">
                             <h6>Contact Number :</h6> (1) 000 991 8830, (800) 8001-8588
@@ -37,7 +35,8 @@
                     </ul>
                 </div>
                 <h5 class="mb-2">Career Info</h5>
-                <p>If you’re interested in employment opportunities at Unicoder, please email us:<br> <a href="#">support@unicoderbd.com</a></p>
+                <p>If you’re interested in employment opportunities at Unicoder, please email us:<br> <a
+                        href="#">support@unicoderbd.com</a></p>
             </div>
             <div class="col-md-7 order-md-1">
                 <h4 class="down-line mb-4">Send Message</h4>
@@ -46,23 +45,28 @@
                         <div class="row">
                             <div class="col-md-6 mb-20">
                                 <label class="mb-2">Full Name:</label>
-                                <input placeholder="Enter your name" formControlName="name" type="text" class="form-control bg-white" required="">
+                                <input placeholder="Enter your name" formControlName="name" type="text"
+                                    class="form-control bg-white" required="">
                             </div>
                             <div class="col-md-6 mb-20">
                                 <label class="mb-2">Your Email:</label>
-                                <input placeholder="Enter your email" formControlName="email" type="email" class="form-control bg-white" required="">
+                                <input placeholder="Enter your email" formControlName="email" type="email"
+                                    class="form-control bg-white" required="">
                             </div>
                             <div class="col-md-12 mb-20">
                                 <label class="mb-2">Subject:</label>
-                                <input placeholder="Enter subject" formControlName="subject" type="text" class="form-control bg-white" required="">
+                                <input placeholder="Enter subject" formControlName="subject" type="text"
+                                    class="form-control bg-white" required="">
                             </div>
                             <div class="col-md-12 mb-20">
                                 <label class="mb-2">Contact Number:</label>
-                                <input placeholder="Enter contact number" formControlName="mobile" type="tel" class="form-control bg-white" required="">
+                                <input placeholder="Enter contact number" formControlName="mobile" type="tel"
+                                    class="form-control bg-white" required="">
                             </div>
                             <div class="col-md-12 mb-20">
                                 <label class="mb-2">Message:</label>
-                                <textarea placeholder="Enter your message" formControlName="message" class="form-control bg-white" rows="8" required=""></textarea>
+                                <textarea placeholder="Enter your message" formControlName="message"
+                                    class="form-control bg-white" rows="8" required=""></textarea>
                             </div>
                             <div class="col-md-12">
                                 <button class="btn btn-primary" name="submit" type="submit">Send Message</button>
