--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,6 +30,9 @@
                                                                 <li class="nav-item" routerLinkActive="active">
                                                                         <a class="nav-link" routerLink="/contact">Contact Us</a>
                                                                 </li>
+                                                                <li class="nav-item" routerLinkActive="active">
+                                                                        <a class="nav-link" routerLink="/career">Career</a>
+                                                                </li>
                                                         </ul>
                                                 </div>
                                         </nav>
@@ -65,6 +68,9 @@
                                         </li>
                                         <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/contact">Contact Us</a>
+                                        </li>
+                                        <li class="nav-item" routerLinkActive="active">
+                                                <a class="nav-link" routerLink="/career">Career</a>
                                         </li>
                                 </ul>
                             </div>
