--- a/src/app/property-detail/property-detail.component.html
+++ b/src/app/property-detail/property-detail.component.html
@@ -111,9 +111,9 @@
                             </div>
                             <ul class="quick-meta mt-4">
                                
-                                <li class="bg-light"><a href="#" title="Download PDF" class="text-dark"><i
+                                <li class="bg-light"><a title="Download PDF" class="text-dark"><i
                                             class="fas fa-download flat-mini"></i></a></li>
-                                <li class="bg-primary w-auto"><a href="#" class="px-5 text-white">Booking Now</a></li>
+                                <li class="bg-primary w-auto"><a target="_blank" href="{{baseUrl}}{{propertyData?.property_broucher?.path}}" class="px-5 text-white">Download Broucher</a></li>
                             </ul>
 
                             <hr>
