work on gallery page

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -27,16 +27,18 @@
                             Australia
                         </li>
                         <li class="mb-3">
-                            <h6>Contact Number :</h6> (1) 000 991 8830, (800) 8001-8588
+                            <h6>Contact Number :</h6> (+91) 95494-43222, (+91) 93511-11622
                         </li>
                         <li class="mb-3">
-                            <h6>Email Address :</h6> Info@patron.com, support@patron.com
+                            <h6>Email Address :</h6> Info@thebharatrealestate.com
                         </li>
                     </ul>
                 </div>
                 <h5 class="mb-2">Career Info</h5>
-                <p>If you’re interested in employment opportunities at Unicoder, please email us:<br> <a
-                        href="#">support@unicoderbd.com</a></p>
+                <p>If you’re interested in employment opportunities at <b>The Bharat Real Estate</b>, please email us:<br>
+                    <a href="mailto:Info@thebharatrealestate.com">Info@thebharatrealestate.com</a>
+                  </p>
+                  
             </div>
             <div class="col-md-7 order-md-1">
                 <h4 class="down-line mb-4">Send Message</h4>
