--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -410,7 +410,7 @@
               <span class="sub-title text-white">We can help you realize your dream of a new home</span>
             </div>
             <div class="col-lg-3 col-md-4 d-flex align-items-center">
-              <a href="#" class="btn btn-white d-table xs-mx-auto ms-auto">Explore Property</a>
+              <a routerLink="listing" class="btn btn-white d-table xs-mx-auto ms-auto">Explore Property</a>
             </div>
           </div>
         </div>
