--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,19 +5,20 @@
             <div class="col">
                 <div class="footer-widget mb-4">
                     <div class="footer-logo mb-4">
-                        <a href="#"><img src="assets/assets/images/logo/logo-full-white.png"
+                        <a><img src="assets/assets/images/logo/logo-full-white.png"
                                 alt="Image not found!" /></a>
                     </div>
-                    <p>Risus commodo congue augue phas ellus morbi hymenaeos ante tincidu eu orci dictum bibe ndum lacus
-                        pla tea
-                        primis mi lacinia</p>
+                    <p>Awesome Real Estate Company for Housing and Construction.</p>
                 </div>
                 <div class="footer-widget media-widget mb-4">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="https://twitter.com/thebharatestate" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/the-bharat-real-estate-031a74275" target="_blank">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://www.pinterest.com/thebharatrealestate" target="_blank"><i class="fab fa-pinterest-p"></i></a>
                 </div>
             </div>
             <div class="col">
@@ -25,8 +26,9 @@
                     <h3 class="widget-title mb-4">Contact Info</h3>
                     <ul>
                         <li>Unicoder Design Agency 301 The Greenhouse, Custard Factory, London, E3 8DY.</li>
-                        <li>+1 246-345-0695</li>
-                        <li>helpline@homex.com</li>
+                        <li><span><i class="fas fa-phone"></i> &nbsp;</span>+91 95494-43222</li>
+                        <li><span><i class="fas fa-phone"></i> &nbsp;</span>+91 93511-11622</li>
+                        <li><span><i class="fas fa-envelope"></i> &nbsp;</span> Info@thebharatrealestate.com</li>
                     </ul>
                 </div>
             </div>
@@ -34,11 +36,11 @@
                 <div class="footer-widget footer-nav mb-4">
                     <h3 class="widget-title mb-4">Quick Links</h3>
                     <ul>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Investment Solution</a></li>
-                        <li><a href="#">Frequenly Ask Question</a></li>
-                        <li><a href="#">How It Work</a></li>
-                        <li><a href="#">Become a Member</a></li>
+                        <li><a routerLink="/">Home</a></li>
+                        <li><a routerLink="about">About</a></li>
+                        <li><a routerLink="contact">Contact Us</a></li>
+                        <li><a routerLink="gallery">Gallery</a></li>
+                        <li><a routerLink="career">Career</a></li>
                     </ul>
                 </div>
             </div>
@@ -48,7 +50,7 @@
                     <p>Litora ligula dapibus scelerisque vitae, fermentum aenean gravida lobortis mus pulvinar magna
                         turient
                         primis.</p>
-                    <a href="#" class="btn btn-primary w-100">Register Now</a>
+                    <a class="btn btn-primary w-100">Register Now</a>
                 </div>
             </div>
         </div>
@@ -61,13 +63,13 @@
     <div class="container">
         <div class="row row-cols-md-2 row-cols-1">
             <div class="col">
-                <span class="text-white">© 2022 Uniland All right reserved</span>
+                <span class="text-white">© {{currentYear}} The Bharat Real Estate All right reserved</span>
             </div>
             <div class="col">
                 <ul class="line-menu float-end list-color-gray">
-                    <li><a href="#">Privacy & Policy </a></li>
+                    <li><a>Privacy & Policy </a></li>
                     <li>|</li>
-                    <li><a href="#">Site Map</a></li>
+                    <li><a>Site Map</a></li>
                 </ul>
             </div>
         </div>
