--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -31,6 +31,9 @@
                                                                         <a class="nav-link" routerLink="/contact">Contact Us</a>
                                                                 </li>
                                                                 <li class="nav-item" routerLinkActive="active">
+                                                                        <a class="nav-link" routerLink="/gallery">Gallery</a>
+                                                                </li>
+                                                                <li class="nav-item" routerLinkActive="active">
                                                                         <a class="nav-link" routerLink="/career">Career</a>
                                                                 </li>
                                                         </ul>
@@ -68,6 +71,9 @@
                                         </li>
                                         <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/contact">Contact Us</a>
+                                        </li>
+                                        <li class="nav-item" routerLinkActive="active">
+                                                <a class="nav-link" routerLink="/gallery">Gallery</a>
                                         </li>
                                         <li class="nav-item" routerLinkActive="active">
                                                 <a class="nav-link" routerLink="/career">Career</a>
